jenkins-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-claudio-zamora
