agent.yaml
apiVersion: v1
kind: Pod
spec:
  serviceAccountName: jenkins-deployer
  containers:
    - name: node
      image: node:24-alpine
      command: ["sleep"]
      args: ["99d"]
      securityContext:
        runAsUser: 0
    - name: docker
      image: docker:27-cli
      command: ["sleep"]
      args: ["99d"]
    - name: dind
      image: docker:27-dind
      args: ["--host=tcp://127.0.0.1:2375", "--host=unix:///var/run/docker.sock", "--tls=false"]
      securityContext:
        privileged: true
      volumeMounts:
        - name: docker-storage
          mountPath: /var/lib/docker
  volumes:
    - name: docker-storage
      emptyDir: {}
